@@ -119,6 +119,9 @@ formatC <- function (x, digits = NULL, width = NULL,
     ## sanity check for flags added 2.1.0
     flag <- as.character(flag)
     if(length(flag) != 1) stop("'flag' must be a string, i.e., of length 1")
+    nf <- strsplit(flag, "")[[1L]]
+    if(!all(nf %in% c("0", "+", "-", " ", "#", "'", "I")))
+	stop("'flag' should contain only characters from [0+- #'I]")
 
     format.char <- function (x, width, flag)
     {
@@ -177,9 +180,6 @@ formatC <- function (x, digits = NULL, width = NULL,
     }
     if(is.null(width))	width <- digits + 1L
     else if (width == 0L) width <- digits
-    nf <- strsplit(flag, "")[[1L]]
-    if(!all(nf %in% c("0", "+", "-", " ", "#", "'", "I")))
-        warning("'flag' should contain only characters from [0+- #'I]")
     i.strlen <-
 	pmax(abs(as.integer(width)),
 	     if(format == "fg" || format == "f") {
